--- a/tweety_app/src/main/resources/application.properties
+++ b/tweety_app/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+server.port=8080
+spring.application.name= Twitter_clone
+spring.security.user.name= user
+spring.security.user.password = khushi
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.username=twitterdb
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
