--- a/tweety_app/src/main/resources/application.properties
+++ b/tweety_app/src/main/resources/application.properties
@@ -2,10 +2,22 @@ server.port=8080
 spring.application.name= Twitter_clone
 spring.security.user.name= user
 spring.security.user.password = khushi
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.username=twitterdb
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/twitter_clone
+#spring.datasource.username=root
+#spring.datasource.password=Khushi
+#spring.jpa.database=MYSQL
+#spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/twitter_clone
+spring.datasource.username=root
+spring.datasource.password=Khushi
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
